@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-12771.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-13329.tgz',
      'xapian-core.tgz',
-     '37b7ebc82103d69204d6ad2ac3ed28532adae033',
+     '7ad09c57ed071e89fd3195c0a648761d0b632632',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-12771.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-13329.tgz',
      'xapian-bindings.tgz',
-     '6b0d1cb23e03a5ba9df4816bf1d9e18507d8a318',
+     '719db75164b337b3610b9a1e2a72f540c881eebf',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-12771.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-13329.tgz',
      'win32msvc.tgz',
-     '191a3d628fc01d87fc813f98dd1d09d52a35fdcc',
+     '3af1012a97b94d666b0848cbf2db4ca9941cb603',
      'xapian-core/win32',
     ),
     ('Xapian extras',
